# nbdevTutorial

./: README.md  pyproject.toml  settings.ini
nbdevTutorial/: _modidx.py
nbs/: index.ipynb  nbdev.yml
