[tool.poetry]
name = "nbdevtutorial"
version = "0.1.0"
description = "i learn the nbdev"
authors = ["Sean <sean.mckee@colorado.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.0"
jupyterlab = "^4.3.4"
matplotlib = "^3.10.0"
nbdev = "^2.3.34"
quarto = "^0.1.0"
jupyterlab-quarto = "^0.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
